Archive2/45/addb7527ec35e1/output
main.cpp: In member function 'bool TextSearch::LookupTable::isExist(const char*) const':
main.cpp:56:5: error: expected primary-expression before 'return'
     return false;
     ^
main.cpp:56:5: error: expected ')' before 'return'
main.cpp:52:11: warning: unused variable 'current' [-Wunused-variable]
     Node& current = *root_;
           ^
main.cpp:57:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
